Refactor softmax_cross_entropy calls to use braintools.metric and enhance L-BFGS optimizer documentation

--- a/docs/optim_tutorial_05_advanced_optimizers.ipynb
+++ b/docs/optim_tutorial_05_advanced_optimizers.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Difficulty**: Advanced  \n",
     "**Duration**: 40-50 minutes  \n",
-    "**Prerequisites**: Tutorials 1-2 completion\n",
+    "**Prerequisites**: Tutorials [3](./optim_tutorial_03_optax_getting_started.ipynb) and [4](./optim_tutorial_04_learning_rate_scheduling.ipynb) completion\n",
     "\n",
     "## Learning Objectives\n",
     "- Use specialized optimizers for specific scenarios\n",
@@ -47,13 +47,13 @@
     "import time\n",
     "\n",
     "import brainstate\n",
-    "import braintools\n",
-    "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from matplotlib.gridspec import GridSpec"
+    "from matplotlib.gridspec import GridSpec\n",
+    "\n",
+    "import braintools"
    ]
   },
   {
@@ -119,15 +119,18 @@
     "class CNNModel(brainstate.nn.Module):\n",
     "    \"\"\"CNN for testing memory-efficient optimizers.\"\"\"\n",
     "\n",
-    "    def __init__(self, num_classes=10):\n",
+    "    def __init__(self, in_size, num_classes=10):\n",
     "        super().__init__()\n",
     "        # Conv layers\n",
-    "        self.conv1 = brainstate.nn.Conv2d(3, 64, kernel_size=3, padding=1)\n",
-    "        self.conv2 = brainstate.nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
-    "        self.conv3 = brainstate.nn.Conv2d(128, 256, kernel_size=3, padding=1)\n",
+    "        self.conv1 = brainstate.nn.Conv2d(in_size, 64, kernel_size=3, padding=1)\n",
+    "        self.pool1 = brainstate.nn.MaxPool2d(2, 2, in_size=self.conv1.out_size)\n",
+    "        self.conv2 = brainstate.nn.Conv2d(self.pool1.out_size, 128, kernel_size=3, padding=1)\n",
+    "        self.pool2 = brainstate.nn.MaxPool2d(2, 2, in_size=self.conv2.out_size)\n",
+    "        self.conv3 = brainstate.nn.Conv2d(self.pool2.out_size, 256, kernel_size=3, padding=1)\n",
+    "        self.pool3 = brainstate.nn.MaxPool2d(2, 2, in_size=self.conv3.out_size)\n",
     "\n",
     "        # Dense layers\n",
-    "        self.fc1 = brainstate.nn.Linear(256 * 4 * 4, 512)\n",
+    "        self.fc1 = brainstate.nn.Linear(int(np.prod(self.pool3.out_size)), 512)\n",
     "        self.fc2 = brainstate.nn.Linear(512, num_classes)\n",
     "\n",
     "    def __call__(self, x):\n",
@@ -138,15 +141,15 @@
     "        # Conv blocks\n",
     "        x = self.conv1(x)\n",
     "        x = jax.nn.relu(x)\n",
-    "        x = jax.nn.max_pool(x, (2, 2), (2, 2))\n",
+    "        x = self.pool1(x)\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = jax.nn.relu(x)\n",
-    "        x = jax.nn.max_pool(x, (2, 2), (2, 2))\n",
+    "        x = self.pool2(x)\n",
     "\n",
     "        x = self.conv3(x)\n",
     "        x = jax.nn.relu(x)\n",
-    "        x = jax.nn.max_pool(x, (2, 2), (2, 2))\n",
+    "        x = self.pool3(x)\n",
     "\n",
     "        # Flatten and FC layers\n",
     "        x = x.reshape(x.shape[0], -1)\n",
@@ -167,10 +170,9 @@
     "\n",
     "    def __call__(self, x):\n",
     "        # x shape: (batch, seq_len, features)\n",
-    "        output, _ = self.rnn(x)\n",
+    "        outputs = brainstate.transform.for_loop(self.rnn, x)\n",
     "        # Use last timestep\n",
-    "        output = output[:, -1, :]\n",
-    "        return self.fc(output)"
+    "        return self.fc(outputs[-1])"
    ]
   },
   {
@@ -246,8 +248,7 @@
     "        # Add L2 regularization\n",
     "        l2_reg = 1e-4\n",
     "        for state in param_states.values():\n",
-    "            if hasattr(state, 'value'):\n",
-    "                loss = loss + l2_reg * jnp.sum(state.value ** 2)\n",
+    "            loss = loss + l2_reg * jnp.sum(state.value ** 2)\n",
     "\n",
     "        return loss\n",
     "\n",
@@ -287,17 +288,13 @@
     "\n",
     "    @brainstate.transform.jit\n",
     "    def train_step(X_batch, y_batch):\n",
-    "        loss, grads, acc = compute_loss_and_grads(\n",
-    "            model, X_batch, y_batch, param_states\n",
-    "        )\n",
+    "        loss, grads, acc = compute_loss_and_grads(model, X_batch, y_batch, param_states)\n",
     "        optimizer.update(grads)\n",
     "        return loss, acc\n",
     "\n",
     "    @brainstate.transform.jit\n",
     "    def eval_step(X_batch, y_batch):\n",
-    "        loss, _, acc = compute_loss_and_grads(\n",
-    "            model, X_batch, y_batch, param_states\n",
-    "        )\n",
+    "        loss, _, acc = compute_loss_and_grads(model, X_batch, y_batch, param_states)\n",
     "        return loss, acc\n",
     "\n",
     "    history = {\n",
@@ -335,8 +332,7 @@
     "        val_loss, val_acc = eval_step(X_val[:500], y_val[:500])  # Use subset for speed\n",
     "\n",
     "        # Update learning rate if scheduler is attached\n",
-    "        if hasattr(optimizer, 'lr') and hasattr(optimizer.lr, 'step'):\n",
-    "            optimizer.lr.step()\n",
+    "        optimizer.lr.step()\n",
     "\n",
     "        # Record metrics\n",
     "        history['train_loss'].append(np.mean(train_losses))\n",
@@ -418,8 +414,8 @@
     "adafactor_optimizer = braintools.optim.Adafactor(\n",
     "    lr=1e-3,\n",
     "    decay_rate=0.8,\n",
-    "    factorized=True,  # Enable factorization for memory efficiency\n",
-    "    clipping_threshold=1.0\n",
+    "    factored=True,  # Enable factorization for memory efficiency\n",
+    "    clip_threshold=1.0\n",
     ")\n",
     "\n",
     "print(\"Training with Adafactor (factorized second moments)...\")\n",
@@ -455,7 +451,7 @@
     "# Wrap with Lookahead\n",
     "lookahead_optimizer = braintools.optim.Lookahead(\n",
     "    base_optimizer,\n",
-    "    k=5,  # Update slow weights every 5 steps\n",
+    "    sync_period=5,  # Update slow weights every 5 steps\n",
     "    alpha=0.5  # Interpolation factor\n",
     ")\n",
     "\n",
@@ -534,7 +530,7 @@
     "    betas=(0.9, 0.999),\n",
     "    eps=1e-6,\n",
     "    weight_decay=0.01,\n",
-    "    clamp_value=10.0  # Gradient clipping\n",
+    "    grad_clip_value=10.0  # Gradient clipping\n",
     ")\n",
     "\n",
     "print(\"Training with LAMB (Large Batch optimizer)...\")\n",
@@ -664,9 +660,8 @@
     "# L-BFGS requires full-batch training\n",
     "lbfgs_optimizer = braintools.optim.LBFGS(\n",
     "    lr=1.0,\n",
-    "    max_iter=20,\n",
-    "    history_size=10,\n",
-    "    line_search_fn='strong_wolfe'\n",
+    "    memory_size=10,\n",
+    "    line_search_fn='zoom'\n",
     ")\n",
     "\n",
     "print(\"Training with L-BFGS (Quasi-Newton method)...\")\n",
