Refactor tutorials to use direct imports for connection and initialization classes

--- a/docs/conn_tutorial_01_fundamentals.ipynb
+++ b/docs/conn_tutorial_01_fundamentals.ipynb
@@ -37,8 +37,8 @@
    "id": "bb1c754b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:45.938962Z",
-     "start_time": "2025-09-27T15:06:41.854271Z"
+     "end_time": "2025-10-01T11:38:20.701310Z",
+     "start_time": "2025-10-01T11:38:17.352404Z"
     }
    },
    "source": [
@@ -47,7 +47,8 @@
     "import brainunit as u\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import braintools.conn as conn\n",
+    "from braintools.conn import ConnectionResult, Random, AllToAll, OneToOne, Ring\n",
+    "from braintools.init import Normal, Uniform, Constant\n",
     "import braintools.visualize as visualize\n",
     "\n",
     "plt.rcParams[\"figure.dpi\"] = 110\n",
@@ -65,15 +66,12 @@
    "id": "3912fc8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:45.948982Z",
-     "start_time": "2025-09-27T15:06:45.943048Z"
+     "end_time": "2025-10-01T11:38:20.714974Z",
+     "start_time": "2025-10-01T11:38:20.707752Z"
     }
    },
    "source": [
-    "\n",
-    "from typing import Optional, Tuple\n",
-    "\n",
-    "def summarize_result(result: conn.ConnectionResult, label: str) -> None:\n",
+    "def summarize_result(result: ConnectionResult, label: str) -> None:\n",
     "    '''Pretty-print summary statistics for a connectivity result.'''\n",
     "    pre_size, post_size = result.shape\n",
     "    total_possible = max(pre_size * post_size, 1)\n",
@@ -144,16 +142,16 @@
    "id": "72653fb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:45.963508Z",
-     "start_time": "2025-09-27T15:06:45.952332Z"
+     "end_time": "2025-10-01T11:38:20.732195Z",
+     "start_time": "2025-10-01T11:38:20.722902Z"
     }
    },
    "source": [
     "\n",
-    "random_pattern = conn.Random(\n",
+    "random_pattern = Random(\n",
     "    prob=0.12,\n",
-    "    weight=conn.NormalWeight(mean=1.0 * u.nS, std=0.25 * u.nS),\n",
-    "    delay=conn.UniformDelay(low=0.5 * u.ms, high=2.0 * u.ms),\n",
+    "    weight=Normal(mean=1.0 * u.nS, std=0.25 * u.nS),\n",
+    "    delay=Uniform(low=0.5 * u.ms, high=2.0 * u.ms),\n",
     "    allow_self_connections=False,\n",
     "    seed=42,\n",
     ")\n",
@@ -183,8 +181,8 @@
    "id": "465d5fc2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.098418Z",
-     "start_time": "2025-09-27T15:06:45.967028Z"
+     "end_time": "2025-10-01T11:38:20.881494Z",
+     "start_time": "2025-10-01T11:38:20.745004Z"
     }
    },
    "source": [
@@ -238,16 +236,16 @@
    "id": "e6f128ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.243647Z",
-     "start_time": "2025-09-27T15:06:46.103139Z"
+     "end_time": "2025-10-01T11:38:21.034099Z",
+     "start_time": "2025-10-01T11:38:20.886224Z"
     }
    },
    "source": [
     "\n",
-    "all_to_all_pattern = conn.AllToAll(\n",
+    "all_to_all_pattern = AllToAll(\n",
     "    include_self_connections=False,\n",
-    "    weight=conn.ConstantWeight(0.5 * u.nS),\n",
-    "    delay=conn.ConstantDelay(1.0 * u.ms),\n",
+    "    weight=Constant(0.5 * u.nS),\n",
+    "    delay=Constant(1.0 * u.ms),\n",
     ")\n",
     "\n",
     "all_to_all_result = all_to_all_pattern(pre_size=16, post_size=16)\n",
@@ -275,8 +273,8 @@
    "id": "d5d357bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.352401Z",
-     "start_time": "2025-09-27T15:06:46.247525Z"
+     "end_time": "2025-10-01T11:38:21.153844Z",
+     "start_time": "2025-10-01T11:38:21.045339Z"
     }
    },
    "source": [
@@ -330,16 +328,16 @@
    "id": "9fa02c44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.410626Z",
-     "start_time": "2025-09-27T15:06:46.357555Z"
+     "end_time": "2025-10-01T11:38:21.224344Z",
+     "start_time": "2025-10-01T11:38:21.170358Z"
     }
    },
    "source": [
     "\n",
-    "one_to_one_pattern = conn.OneToOne(\n",
+    "one_to_one_pattern = OneToOne(\n",
     "    circular=True,\n",
-    "    weight=conn.ConstantWeight(0.8 * u.nS),\n",
-    "    delay=conn.ConstantDelay(0.8 * u.ms),\n",
+    "    weight=Constant(0.8 * u.nS),\n",
+    "    delay=Constant(0.8 * u.ms),\n",
     ")\n",
     "\n",
     "one_to_one_result = one_to_one_pattern(pre_size=12, post_size=12)\n",
@@ -367,8 +365,8 @@
    "id": "5f18403e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.520955Z",
-     "start_time": "2025-09-27T15:06:46.414982Z"
+     "end_time": "2025-10-01T11:38:21.343684Z",
+     "start_time": "2025-10-01T11:38:21.240790Z"
     }
    },
    "source": [
@@ -422,8 +420,8 @@
    "id": "09d93b05",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.532276Z",
-     "start_time": "2025-09-27T15:06:46.527627Z"
+     "end_time": "2025-10-01T11:38:21.353928Z",
+     "start_time": "2025-10-01T11:38:21.348180Z"
     }
    },
    "source": [
@@ -454,8 +452,8 @@
    "id": "cf8ba47e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.713547Z",
-     "start_time": "2025-09-27T15:06:46.540253Z"
+     "end_time": "2025-10-01T11:38:21.527455Z",
+     "start_time": "2025-10-01T11:38:21.371067Z"
     }
    },
    "source": [
@@ -520,13 +518,13 @@
    "id": "bcee675a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:46.912651Z",
-     "start_time": "2025-09-27T15:06:46.717554Z"
+     "end_time": "2025-10-01T11:38:21.733632Z",
+     "start_time": "2025-10-01T11:38:21.531742Z"
     }
    },
    "source": [
     "\n",
-    "large_random = conn.Random(prob=0.05, seed=7)\n",
+    "large_random = Random(prob=0.05, seed=7)\n",
     "large_random_result = large_random(pre_size=400, post_size=400)\n",
     "summarize_result(large_random_result, \"Random connectivity (400 × 400, p = 0.05)\")\n",
     "\n",
@@ -593,8 +591,8 @@
    "id": "71e913c8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:47.287301Z",
-     "start_time": "2025-09-27T15:06:46.916904Z"
+     "end_time": "2025-10-01T11:38:22.114142Z",
+     "start_time": "2025-10-01T11:38:21.748242Z"
     }
    },
    "source": [
@@ -603,10 +601,10 @@
     "layer_results = []\n",
     "\n",
     "for idx in range(len(layer_sizes) - 1):\n",
-    "    pattern = conn.Random(\n",
+    "    pattern = Random(\n",
     "        prob=0.25,\n",
-    "        weight=conn.NormalWeight(mean=(1.0 + 0.3 * idx) * u.nS, std=0.2 * u.nS),\n",
-    "        delay=conn.ConstantDelay(1.0 * u.ms),\n",
+    "        weight=Normal(mean=(1.0 + 0.3 * idx) * u.nS, std=0.2 * u.nS),\n",
+    "        delay=Constant(1.0 * u.ms),\n",
     "        allow_self_connections=False,\n",
     "        seed=100 + idx,\n",
     "    )\n",
@@ -682,16 +680,16 @@
    "id": "be266e24",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-27T15:06:47.798321Z",
-     "start_time": "2025-09-27T15:06:47.294476Z"
+     "end_time": "2025-10-01T11:38:22.650554Z",
+     "start_time": "2025-10-01T11:38:22.120449Z"
     }
    },
    "source": [
     "\n",
-    "ring_pattern = conn.Ring(\n",
+    "ring_pattern = Ring(\n",
     "    neighbors=3,\n",
-    "    weight=conn.ConstantWeight(1.0 * u.nS),\n",
-    "    delay=conn.ConstantDelay(1.0 * u.ms),\n",
+    "    weight=Constant(1.0 * u.nS),\n",
+    "    delay=Constant(1.0 * u.ms),\n",
     "    bidirectional=True,\n",
     ")\n",
     "ring_result = ring_pattern(pre_size=50, post_size=50)\n",
@@ -747,22 +745,6 @@
     }
    ],
    "execution_count": 13
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8f68f1d",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Summary and next steps\n",
-    "\n",
-    "- Explored the basic connectivity patterns for point neurons\n",
-    "- Learned how to interrogate `ConnectionResult` objects and visualise matrices\n",
-    "- Combined patterns to build larger example networks (dense, layered, ring)\n",
-    "\n",
-    "Next, try the follow-up tutorials covering population and multi-compartment\n",
-    "connectivity, biological constraints, and spatial/topological patterns.\n"
-   ]
   }
  ],
  "metadata": {
