--- a/docs/conn_tutorial_03_composable_initialization.ipynb
+++ b/docs/conn_tutorial_03_composable_initialization.ipynb
@@ -41,7 +41,8 @@
     "import brainunit as u\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
-    "import braintools.conn as conn\n",
+    "from braintools.conn import Random, Ring, DistanceModulated, ExcitatoryInhibitory\n",
+    "from braintools.init import LogNormal, Uniform, Beta, Exponential, Gamma, TruncatedNormal, Constant, Normal\n",
     "import braintools.visualize as visualize\n",
     "\n",
     "# Set up plotting\n",
@@ -346,19 +347,19 @@
    "cell_type": "code",
    "source": [
     "# 1. Constant Delay\n",
-    "const_delay = conn.ConstantDelay(1.0 * u.ms)\n",
+    "const_delay = Constant(1.0 * u.ms)\n",
     "const_delay_samples = const_delay(rng, n_samples)\n",
     "\n",
     "# 2. Uniform Delay\n",
-    "uniform_delay = conn.UniformDelay(0.5 * u.ms, 2.0 * u.ms)\n",
+    "uniform_delay = Uniform(0.5 * u.ms, 2.0 * u.ms)\n",
     "uniform_delay_samples = uniform_delay(rng, n_samples)\n",
     "\n",
     "# 3. Normal Delay (with minimum)\n",
-    "normal_delay = conn.NormalDelay(mean=1.5 * u.ms, std=0.3 * u.ms, min_delay=0.1 * u.ms)\n",
+    "normal_delay = Normal(mean=1.5 * u.ms, std=0.3 * u.ms, min_delay=0.1 * u.ms)\n",
     "normal_delay_samples = normal_delay(rng, n_samples)\n",
     "\n",
     "# 4. Gamma Delay\n",
-    "gamma_delay = conn.GammaDelay(shape=2.0, scale=0.5 * u.ms)\n",
+    "gamma_delay = Gamma(shape=2.0, scale=0.5 * u.ms)\n",
     "gamma_delay_samples = gamma_delay(rng, n_samples)\n",
     "\n",
     "print(\"Delay Distributions:\")\n",
@@ -462,7 +463,7 @@
    "cell_type": "code",
    "source": [
     "# Base distribution\n",
-    "base = conn.NormalWeight(1.0 * u.nS, 0.2 * u.nS)\n",
+    "base = Normal(1.0 * u.nS, 0.2 * u.nS)\n",
     "base_samples = base(rng, n_samples)\n",
     "\n",
     "# Add a constant offset\n",
@@ -474,7 +475,7 @@
     "subtracted_samples = subtracted(rng, n_samples)\n",
     "\n",
     "# Combine two distributions\n",
-    "base2 = conn.UniformWeight(0.2 * u.nS, 0.8 * u.nS)\n",
+    "base2 = Uniform(0.2 * u.nS, 0.8 * u.nS)\n",
     "combined = base + base2\n",
     "combined_samples = combined(rng, n_samples)\n",
     "\n",
@@ -574,7 +575,7 @@
    "cell_type": "code",
    "source": [
     "# Base distribution\n",
-    "base = conn.UniformWeight(0.5 * u.nS, 1.5 * u.nS)\n",
+    "base = Uniform(0.5 * u.nS, 1.5 * u.nS)\n",
     "base_samples = base(rng, n_samples)\n",
     "\n",
     "# Multiply by a scalar\n",
@@ -586,7 +587,7 @@
     "scaled_down_samples = scaled_down(rng, n_samples)\n",
     "\n",
     "# Multiply two distributions\n",
-    "multiplier = conn.NormalWeight(1.0 * u.nS, 0.2 * u.nS)\n",
+    "multiplier = Normal(1.0 * u.nS, 0.2 * u.nS)\n",
     "product = base * multiplier\n",
     "product_samples = product(rng, n_samples)\n",
     "\n",
@@ -691,7 +692,7 @@
    "cell_type": "code",
    "source": [
     "# Create a wide distribution\n",
-    "wide = conn.NormalWeight(1.0 * u.nS, 0.8 * u.nS)\n",
+    "wide = Normal(1.0 * u.nS, 0.8 * u.nS)\n",
     "wide_samples = wide(rng, n_samples)\n",
     "\n",
     "# Clip to a range\n",
@@ -805,7 +806,7 @@
    "cell_type": "code",
    "source": [
     "# Complex transformation pipeline\n",
-    "base = conn.NormalWeight(1.0 * u.nS, 0.3 * u.nS)\n",
+    "base = Normal(1.0 * u.nS, 0.3 * u.nS)\n",
     "\n",
     "# Chain multiple operations\n",
     "transformed = (\n",
@@ -913,18 +914,18 @@
     "positions = np.random.uniform(0, 100, (n_neurons, 2)) * u.um\n",
     "\n",
     "# Distance-modulated weight: starts with base distribution, modulated by distance\n",
-    "dist_weight = conn.DistanceModulatedWeight(\n",
-    "    base_dist=conn.NormalWeight(2.0 * u.nS, 0.4 * u.nS),\n",
+    "dist_weight = DistanceModulated(\n",
+    "    base_dist=Normal(2.0 * u.nS, 0.4 * u.nS),\n",
     "    distance_profile='exponential',  # exp(-d/sigma)\n",
     "    sigma=30.0 * u.um,\n",
     "    min_weight=0.1 * u.nS\n",
     ")\n",
     "\n",
     "# Create connectivity to get distances\n",
-    "spatial_conn = conn.Random(\n",
+    "spatial_conn = Random(\n",
     "    prob=0.15,\n",
     "    weight=dist_weight,\n",
-    "    delay=conn.ConstantDelay(1.0 * u.ms),\n",
+    "    delay=Constant(1.0 * u.ms),\n",
     "    seed=42\n",
     ")\n",
     "\n",
@@ -1030,14 +1031,14 @@
     "profile_results = []\n",
     "\n",
     "for profile in profiles:\n",
-    "    dist_w = conn.DistanceModulatedWeight(\n",
-    "        base_dist=conn.ConstantWeight(2.0 * u.nS),\n",
+    "    dist_w = DistanceModulated(\n",
+    "        base_dist=Constant(2.0 * u.nS),\n",
     "        distance_profile=profile,\n",
     "        sigma=30.0 * u.um,\n",
     "        min_weight=0.1 * u.nS\n",
     "    )\n",
     "    \n",
-    "    conn_pattern = conn.Random(\n",
+    "    conn_pattern = Random(\n",
     "        prob=0.15,\n",
     "        weight=dist_w,\n",
     "        seed=42\n",
@@ -1133,15 +1134,15 @@
    "cell_type": "code",
    "source": [
     "# Realistic axonal conduction velocity: 0.5 m/s for unmyelinated, 5-10 m/s for myelinated\n",
-    "dist_delay = conn.DistanceProportionalDelay(\n",
+    "dist_delay = DistanceProportionalDelay(\n",
     "    base_delay=0.5 * u.ms,  # Synaptic delay\n",
     "    velocity=1.0 * u.meter / u.second,  # Unmyelinated axon\n",
     "    max_delay=10.0 * u.ms\n",
     ")\n",
     "\n",
-    "realistic_conn = conn.Random(\n",
+    "realistic_conn = Random(\n",
     "    prob=0.15,\n",
-    "    weight=conn.LogNormalWeight(1.0 * u.nS, 0.3 * u.nS),\n",
+    "    weight=LogNormal(1.0 * u.nS, 0.3 * u.nS),\n",
     "    delay=dist_delay,\n",
     "    seed=42\n",
     ")\n",
@@ -1252,7 +1253,7 @@
    "source": [
     "# Using pipe operator for transformations\n",
     "piped_init = (\n",
-    "    conn.NormalWeight(1.0 * u.nS, 0.3 * u.nS)\n",
+    "    Normal(1.0 * u.nS, 0.3 * u.nS)\n",
     "    | (lambda x: u.math.maximum(x, 0.1 * u.nS))  # Ensure minimum\n",
     "    | (lambda x: x * 1.5)                         # Scale up\n",
     ")\n",
@@ -1303,36 +1304,36 @@
     "all_positions = np.random.uniform(0, 200, (N_total, 2)) * u.um\n",
     "\n",
     "# Excitatory weights: log-normal with distance decay\n",
-    "exc_weight = conn.DistanceModulatedWeight(\n",
-    "    base_dist=conn.LogNormalWeight(1.2 * u.nS, 0.4 * u.nS),\n",
+    "exc_weight = DistanceModulated(\n",
+    "    base_dist=LogNormal(1.2 * u.nS, 0.4 * u.nS),\n",
     "    distance_profile='exponential',\n",
     "    sigma=50.0 * u.um,\n",
     "    min_weight=0.1 * u.nS\n",
     ")\n",
     "\n",
     "# Inhibitory weights: stronger, less distance-dependent\n",
-    "inh_weight = conn.DistanceModulatedWeight(\n",
-    "    base_dist=conn.LogNormalWeight(3.0 * u.nS, 0.8 * u.nS),\n",
+    "inh_weight = DistanceModulated(\n",
+    "    base_dist=LogNormal(3.0 * u.nS, 0.8 * u.nS),\n",
     "    distance_profile='gaussian',\n",
     "    sigma=80.0 * u.um,\n",
     "    min_weight=0.2 * u.nS\n",
     ")\n",
     "\n",
     "# Distance-dependent delays\n",
-    "exc_delay = conn.DistanceProportionalDelay(\n",
+    "exc_delay = DistanceProportionalDelay(\n",
     "    base_delay=0.8 * u.ms,\n",
     "    velocity=2.0 * u.meter / u.second,  # Faster (myelinated)\n",
     "    max_delay=8.0 * u.ms\n",
     ")\n",
     "\n",
-    "inh_delay = conn.DistanceProportionalDelay(\n",
+    "inh_delay = DistanceProportionalDelay(\n",
     "    base_delay=0.5 * u.ms,\n",
     "    velocity=1.0 * u.meter / u.second,  # Slower (unmyelinated)\n",
     "    max_delay=5.0 * u.ms\n",
     ")\n",
     "\n",
     "# Create E-I network\n",
-    "complex_network = conn.ExcitatoryInhibitory(\n",
+    "complex_network = ExcitatoryInhibitory(\n",
     "    exc_ratio=0.8,\n",
     "    exc_prob=0.08,\n",
     "    inh_prob=0.15,\n",
@@ -1561,7 +1562,7 @@
     "   - `|` operator: Functional composition\n",
     "\n",
     "5. **Distance-Based**:\n",
-    "   - `DistanceModulatedWeight`: Spatial weight decay\n",
+    "   - `DistanceModulated`: Spatial weight decay\n",
     "   - `DistanceProportionalDelay`: Conduction delays\n",
     "   - Profiles: exponential, gaussian, linear\n",
     "\n",
@@ -1593,18 +1594,6 @@
     "   - Different weight distributions for E and I\n",
     "   - Distance-dependent parameters\n",
     "   - Analyze the balance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Next Steps\n",
-    "\n",
-    "Continue with:\n",
-    "- **Tutorial 4**: Spatial and Advanced Connectivity Patterns\n",
-    "\n",
-    "Great job completing Tutorial 3! 🎉"
    ]
   }
  ],
