--- a/docs/conn_tutorial_04_spatial_advanced.ipynb
+++ b/docs/conn_tutorial_04_spatial_advanced.ipynb
@@ -34,8 +34,14 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "import braintools.conn as conn\n",
     "import braintools.visualize as vis\n",
+    "from braintools.conn import DistanceDependent, SmallWorld, ScaleFree, Random, Grid, Ring, ConnectionResult\n",
+    "from braintools.init import (\n",
+    "    GaussianProfile, Gamma,\n",
+    "    Normal, LogNormal, Uniform,\n",
+    "    ExponentialProfile, Constant,\n",
+    "    LinearProfile, PowerLawProfile\n",
+    ")\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (12, 4)\n",
     "plt.rcParams['font.size'] = 10"
@@ -1146,29 +1152,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
-    "\n",
-    "In this tutorial, you learned:\n",
-    "\n",
-    "1. **Distance-Dependent Connectivity**: Gaussian, exponential, linear, and power-law profiles for spatial networks\n",
-    "2. **Topological Patterns**: Small-world, scale-free, and modular network structures\n",
-    "3. **Pattern Composition**: Combining local and long-range connectivity, creating spatial small-world networks\n",
-    "4. **Advanced Patterns**: Grid and ring topologies for structured connectivity\n",
-    "5. **Realistic Networks**: Building biologically plausible cortical microcircuits with multiple connectivity principles\n",
-    "\n",
-    "**Key Takeaways:**\n",
-    "- Real neural networks combine multiple connectivity principles operating at different scales\n",
-    "- Distance-dependent connectivity requires spatial positions and uses distance profiles to modulate connection probability\n",
-    "- Topological patterns like small-world and scale-free networks capture global structural properties\n",
-    "- Modular organization creates hierarchical network structures\n",
-    "- Combining patterns allows modeling complex, biologically realistic connectivity\n",
-    "\n",
-    "**Next Steps:**\n",
-    "- Explore custom connectivity patterns for specific research questions\n",
-    "- Integrate connectivity with network dynamics simulation\n",
-    "- Analyze network properties (clustering, path length, modularity)\n",
-    "- Build multi-area networks with heterogeneous connectivity\n",
-    "\n",
     "## Practice Exercises\n",
     "\n",
     "1. **Multi-Profile Network**: Create a network that combines Gaussian, exponential, and linear distance profiles with different weight distributions\n",
