Refactor DistanceModulated class by removing min_weight parameter and updating weight scaling logic. Enhance documentation and add comprehensive tests for various distance profiles and edge cases.

--- a/docs/init_tutorial_04_composite_distance_modulated.ipynb
+++ b/docs/init_tutorial_04_composite_distance_modulated.ipynb
@@ -1400,8 +1400,7 @@
     "        dm_init = init.DistanceModulated(\n",
     "            base_dist=params['base'],\n",
     "            distance_profile=params['profile'],\n",
-    "            min_weight=params['min_weight']\n",
-    "        )\n",
+    "        ).clip(min_val=params['min_weight'])\n",
     "        \n",
     "        # Generate weight\n",
     "        weight = dm_init(1, distances=distance, rng=rng).mantissa[0]\n",
