Refactor UniqueStateManager usage to utilize pytree methods in optimizer and tests

--- a/docs/optim_tutorial_05_advanced_optimizers.ipynb
+++ b/docs/optim_tutorial_05_advanced_optimizers.ipynb
@@ -281,7 +281,7 @@
     "    # Get parameter states\n",
     "    param_states = braintools.optim.UniqueStateManager(\n",
     "        model.states(brainstate.ParamState)\n",
-    "    ).to_dict()\n",
+    "    ).to_pytree()\n",
     "\n",
     "    # Register parameters with optimizer\n",
     "    optimizer.register_trainable_weights(param_states)\n",
