Rename tutorial and documentation files for consistency; update table of contents

--- a/docs/optim/04_learning_rate_scheduling.ipynb
+++ b/docs/optim/04_learning_rate_scheduling.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Difficulty**: Intermediate  \n",
     "**Duration**: 30-40 minutes  \n",
-    "**Prerequisites**: [Tutorial 3](./optim_tutorial_03_optax_getting_started.ipynb) completion\n",
+    "**Prerequisites**: [Tutorial 3](03_optax_getting_started.ipynb) completion\n",
     "\n",
     "## Learning Objectives\n",
     "- Implement various learning rate schedules\n",
