--- a/docs/optim/05_advanced_optimizers.ipynb
+++ b/docs/optim/05_advanced_optimizers.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Difficulty**: Advanced  \n",
     "**Duration**: 40-50 minutes  \n",
-    "**Prerequisites**: Tutorials [3](./optim_tutorial_03_optax_getting_started.ipynb) and [4](./optim_tutorial_04_learning_rate_scheduling.ipynb) completion\n",
+    "**Prerequisites**: Tutorials [3](03_optax_getting_started.ipynb) and [4](04_learning_rate_scheduling.ipynb) completion\n",
     "\n",
     "## Learning Objectives\n",
     "- Use specialized optimizers for specific scenarios\n",
@@ -932,7 +932,7 @@
    "source": [
     "### 7.1 Nevergrad Integration\n",
     "\n",
-    "Nevergrad provides a wide range of gradient-free optimization algorithms, please refer to the [nevergrad tutorial documentation](./optim_tutorial_01_nevergrad_optimizer.ipynb) for details."
+    "Nevergrad provides a wide range of gradient-free optimization algorithms, please refer to the [nevergrad tutorial documentation](01_nevergrad_optimizer.ipynb) for details."
    ]
   },
   {
@@ -941,7 +941,7 @@
    "source": [
     "### 7.2 SciPy Optimization\n",
     "\n",
-    "SciPy provides classical optimization algorithms including constrained optimization, please refer to the [scipy tutorial documentation](./optim_tutorial_02_scipy_optimizer.ipynb) for details."
+    "SciPy provides classical optimization algorithms including constrained optimization, please refer to the [scipy tutorial documentation](02_scipy_optimizer.ipynb) for details."
    ]
   },
   {
